update generation of sprite and types

--- a/PokemonSearchApp/pokemonSearchApp.html
+++ b/PokemonSearchApp/pokemonSearchApp.html
@@ -20,7 +20,7 @@
             <button id="search-button">Search</button>
         </div>
         <div id="pokemon-info">
-            <div style="display: block">
+            <div id="name-id-div" style="display: block">
                 <span id="pokemon-name"></span>
                 <span id="pokemon-id"></span>
             </div>
@@ -29,8 +29,7 @@
                 <span id="height"></span>
             </div>
             <div id="pokemon-sprite"></div>
-            <span id="types">
-            </span>
+            <div id="types"></div>
         </div>
         <div id="pokemon-stats">
             <div class="box"><b>Base</b></div>
